--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@ body{width: 1080px;
 }
 .menuDropDown{
 	position: absolute;
-	left: -1px;
+	left: 0px;
 	width: 100%;
 	margin: 0px auto;
 	padding: 0px;
-	border-left: dotted 1px black;
+	border: none;
 	background-color: white;
 	text-align: center;
 	line-height: 13px;
-	box-shadow: 2px 2px 2px gray;
+	box-shadow: 0px 1px 5px gray;
 	cursor: default;
 	display: none;
 }
