--- a/index.html
+++ b/index.html
@@ -18,10 +18,38 @@ body{width: 1080px;
 	position: relative;
 }
 .upperPart{
+	position: relative;
 	width: 900px;
 	height: 150px;
 	margin: 0px auto;
 	background-color: white;
+}
+.myHeaderPhoto{
+	position: absolute;
+	top: 15px;
+	left: 95px;
+	width: 120px;
+	height: 120px;
+	border-radius: 60px;
+	overflow: hidden;
+}
+.myHeaderPhoto img{
+	position: absolute;
+	top: -33px;
+	left: -17px;
+	width: 280px;
+}
+.myHeaderText{
+	position: absolute;
+	top: 40px;
+	left: 310px;
+}
+.myHeaderText p{
+	margin: 0px;
+	font-size: 50px;
+	color: #9e0500;
+	font-weight: bold;
+	text-shadow: 0px 2px 4px #ffc107;
 }
 .menuBar{
 	width: 920px;
@@ -64,6 +92,7 @@ body{width: 1080px;
 	display: inline-block;
 	width: 100%;
 	height: 40px;
+	color: white;
 	margin: 10px auto 10px auto;
 	padding: 0px;
 	text-align: center;
@@ -93,6 +122,9 @@ body{width: 1080px;
 .menuBarQuater:hover .menuDropDown{
 	display: block;
 }
+.menuBarQuater:hover > .menuBarText{
+	color: black;
+}
 .lowerPart{
 	position: absolute;
 	top: 210px;
@@ -113,8 +145,9 @@ body{width: 1080px;
 #myPhoto_thumb_01, #myPhoto_thumb_02, #myPhoto_thumb_03,
 #myPhoto_thumb_04, #myPhoto_thumb_05, #myPhoto_thumb_06{
 	width: 14%;
-	margin: 0px;
-	border: 2px solid white;
+	margin: 2px;
+	border: none;
+	box-shadow: 0px 0px 3px gray;
 	cursor: pointer;
 	display: inline-block;
 }
@@ -125,11 +158,12 @@ body{width: 1080px;
 }
 #myPhoto_thumb_01:hover, #myPhoto_thumb_02:hover, #myPhoto_thumb_03:hover,
 #myPhoto_thumb_04:hover, #myPhoto_thumb_05:hover, #myPhoto_thumb_06:hover{
-	border-color: black;
+	box-shadow: 0px 0px 8px black;
 }
 #myPhoto_big_01{
 	margin: 5px 100px 50px 100px; padding: 0px;
 	width: 600px;
+	box-shadow: 0px 0px 3px gray;
 }
 #myPhoto_big_02, #myPhoto_big_03, #myPhoto_big_04,
 #myPhoto_big_05, #myPhoto_big_06{
@@ -137,7 +171,9 @@ body{width: 1080px;
 	top: 98px;
 	left: 100px;
 	margin: 0px; padding: 0px;
-	width: 600px; display: none; 
+	width: 600px;
+	box-shadow: 0px 1px 3px gray;
+	display: none; 
 }
 #myPhoto_big_01 img, #myPhoto_big_02 img, #myPhoto_big_03 img,
 #myPhoto_big_04 img, #myPhoto_big_05 img, #myPhoto_big_06 img{
@@ -156,6 +192,12 @@ body{width: 1080px;
 <body>
 	<div class="subBody">
 		<div class="upperPart">
+			<div class="myHeaderPhoto">
+				<img src="https://img3.doubanio.com/view/photo/large/nPMUIQ4hi3yZQBKTCsxg9Q/61715392/x2502528663.jpg" alt="myHeaderPhoto"/>
+			</div>
+			<div class="myHeaderText">
+				<p>Jenny 的 小 站</p>
+			</div>
 		</div>
 		<div class="menuBar">
 			<div class="menuBarQuater">
