--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body{width: 1080px;
 	<div class="subBody">
 		<div class="upperPart">
 			<div class="myHeaderPhoto">
-				<img src="https://img3.doubanio.com/view/photo/large/nPMUIQ4hi3yZQBKTCsxg9Q/61715392/x2502528663.jpg" alt="myHeaderPhoto"/>
+				<img src="photo/index-01.jpg" alt="myHeaderPhoto"/>
 			</div>
 			<div class="myHeaderText">
 				<p>Jenny 的 小 站</p>
@@ -236,40 +236,40 @@ body{width: 1080px;
 		<div class="lowerPart">
 			<div class="myPhoto">
 				<div id="myPhoto_thumb_01">
-					<img src="https://img3.doubanio.com/view/photo/large/nPMUIQ4hi3yZQBKTCsxg9Q/61715392/x2502528663.jpg" alt="图片1"/>
+					<img src="photo/index-01.jpg" alt="图片1"/>
 				</div>
 				<div id="myPhoto_thumb_02">
-					<img src="https://img3.doubanio.com/view/photo/large/ZaOQYx8ougyToF3Sij35SA/61715392/x2502528662.jpg" alt="图片2"/>
+					<img src="photo/index-02.jpg" alt="图片2"/>
 				</div>
 				<div id="myPhoto_thumb_03">
-					<img src="https://img3.doubanio.com/view/photo/large/7UCiOdUmrV8Lqwgr4RgYmg/61715392/x2502528661.jpg" alt="图片3"/>
+					<img src="photo/index-03.jpg" alt="图片3"/>
 				</div>
 				<div id="myPhoto_thumb_04">
-					<img src="https://img3.doubanio.com/view/photo/large/B-9DnSvzco_nI82d0f84nA/61715392/x2502528660.jpg" alt="图片4"/>
+					<img src="photo/index-04.jpg" alt="图片4"/>
 				</div>
 				<div id="myPhoto_thumb_05">
-					<img src="https://img1.doubanio.com/view/photo/large/Sjj1-JW2D_hIu7DcM5vBNQ/61715392/x2502528659.jpg" alt="图片5"/>
+					<img src="photo/index-05.jpg" alt="图片5"/>
 				</div>
 				<div id="myPhoto_thumb_06">
-					<img src="https://img1.doubanio.com/view/photo/large/vluX2KW9y8Kf6LL5Ye0dFw/61715392/x2502528657.jpg" alt="图片6"/>
+					<img src="photo/index-06.jpg" alt="图片6"/>
 				</div>
 				<div id="myPhoto_big_01">
-					<img src="https://img3.doubanio.com/view/photo/large/nPMUIQ4hi3yZQBKTCsxg9Q/61715392/x2502528663.jpg" alt="图片1"/>
+					<img src="photo/index-01.jpg" alt="图片1"/>
 				</div>
 				<div id="myPhoto_big_02">
-					<img src="https://img3.doubanio.com/view/photo/large/ZaOQYx8ougyToF3Sij35SA/61715392/x2502528662.jpg" alt="图片2"/>
+					<img src="photo/index-02.jpg" alt="图片2"/>
 				</div>
 				<div id="myPhoto_big_03">
-					<img src="https://img3.doubanio.com/view/photo/large/7UCiOdUmrV8Lqwgr4RgYmg/61715392/x2502528661.jpg" alt="图片3"/>
+					<img src="photo/index-03.jpg" alt="图片3"/>
 				</div>
 				<div id="myPhoto_big_04">
-					<img src="https://img3.doubanio.com/view/photo/large/B-9DnSvzco_nI82d0f84nA/61715392/x2502528660.jpg" alt="图片4"/>
+					<img src="photo/index-04.jpg" alt="图片4"/>
 				</div>
 				<div id="myPhoto_big_05">
-					<img src="https://img1.doubanio.com/view/photo/large/Sjj1-JW2D_hIu7DcM5vBNQ/61715392/x2502528659.jpg" alt="图片5"/>
+					<img src="photo/index-05.jpg" alt="图片5"/>
 				</div>
 				<div id="myPhoto_big_06">
-					<img src="https://img1.doubanio.com/view/photo/large/vluX2KW9y8Kf6LL5Ye0dFw/61715392/x2502528657.jpg" alt="图片6"/>
+					<img src="photo/index-06.jpg" alt="图片6"/>
 				</div>
 			</div>
 		</div>
