--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ html{width: 100%;
 }
 body{width: 1080px;
 	max-width: 100%;
-	min-width: 380px;
 	margin: 0px auto;
 	text-align: center;
 }
@@ -240,6 +239,15 @@ body{width: 1080px;
 {
 	.myHeaderText p{font-size: 35px;}
 	.menuBarText p{font-size: 16px;}
+}
+@media all and (max-width: 380px)
+{
+	.myHeaderText p{font-size: 33px;}
+	.menuBarText p{font-size: 15px;}
+}
+@media all and (max-width: 350px)
+{
+	.myHeaderText p{font-size: 31px;}
 }
 </style>
 
