--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@ body{width: 1080px;
 {
 	.myHeaderPhoto{left: 20px;}
 	.myHeaderText{left: 120px;}
+	.menuDropDown{
+		width: 300px;
+	}
+	.menuBarQuater:nth-child(3) .menuDropDown, .menuBarQuater:nth-child(4) .menuDropDown{
+		left: auto;
+		right: 0px;
+	}
 }
 @media all and (max-width: 480px)
 {
@@ -263,7 +270,7 @@ body{width: 1080px;
 			</div>
 		</div>
 		<div class="menuBar">
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onlick="">
 				<div class="menuBarText">
 					<p>我的主页</p>
 				</div>
@@ -271,7 +278,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onlick="">
 				<div class="menuBarText">
 					<p>我的文章</p>
 				</div>
@@ -279,7 +286,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onlick="">
 				<div class="menuBarText">
 					<p>我的作品</p>
 				</div>
@@ -287,7 +294,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onlick="">
 				<div class="menuBarText">
 					<p>联系我</p>
 				</div>
