--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ body{width: 1080px;
 	.myHeaderPhoto{left: 20px;}
 	.myHeaderText{left: 120px;}
 	.menuDropDown{
-		width: 300px;
+		width: 200px;
 	}
 	.menuBarQuater:nth-child(3) .menuDropDown, .menuBarQuater:nth-child(4) .menuDropDown{
 		left: auto;
@@ -270,7 +270,7 @@ body{width: 1080px;
 			</div>
 		</div>
 		<div class="menuBar">
-			<div class="menuBarQuater" onlick="">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
 				</div>
@@ -278,7 +278,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater" onlick="">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的文章</p>
 				</div>
@@ -286,7 +286,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater" onlick="">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的作品</p>
 				</div>
@@ -294,7 +294,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater" onlick="">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>联系我</p>
 				</div>
