--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@ body{width: 1080px;
 	</div>
 <script>
 	function(){
-	document.getElementsByClassName('menuBarQuater').mouseouver(){}
-	};
+	document.getElementsByClassName('menuBarQuater').hover()
+	}
 </script>
 </body>
 
