--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ body{width: 1080px;
 		</div>
 	</div>
 <script>
-	function(){
+	window.onload=function(){
 	document.getElementsByClassName('menuBarQuater').hover()
 	}
 </script>
