--- a/index.html
+++ b/index.html
@@ -363,6 +363,38 @@ body{width: 1080px;
 			</div>
 		</div>
 		<div class="myIntro">
+			<div class="myIntro_PC">
+				<input checked="checked" id="payment" name="policy" type="radio" />
+				<label for="payment" id="label_payment">PAYMENT </label>
+				<input id="shipping" name="policy" type="radio" />
+				<label for="shipping" id="label_shipping">SHIPPING</label>
+				<input id="returns" name="policy" type="radio" />
+				<label for="returns" id="label_returns">RETURNS </label>
+				<div id="payment_text">
+					PayPal is the only accepted payment method.<br />
+					&nbsp;
+				</div>
+				<div id="shipping_text">
+					Handling time: 10 business days.<br />
+					Item will be shipped to buyer&#39;s PayPal address.
+				</div>
+				<div id="returns_text">
+					Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
+				</div>
+			</div>
+			<div class="myIntro_mobile">
+				<div class="policyMobileHeader">PAYMENT</div>
+				<div class="policyMobileText">PayPal is the only accepted payment method.</div>
+				<div class="policyMobileHeader">SHIPPING</div>
+				<div class="policyMobileText">
+					Handling time: 10 business days.<br />
+					Item will be shipped to buyer&#39;s PayPal address.
+				</div>
+				<div class="policyMobileHeader">RETURNS</div>
+				<div class="policyMobileText">
+					Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
+				</div>
+			</div>
 		</div>
 	</div>
 <script>
