--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ body{width: 1080px;
 	display: block;
 }
 .myIntro{
+	position: relative;
 	width: 100%;
 }
 @media all and (max-width: 1098px)
@@ -289,7 +290,7 @@ body{width: 1080px;
 			</div>
 		</div>
 		<div class="menuBar">
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
 				</div>
@@ -297,7 +298,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的文章</p>
 				</div>
@@ -305,7 +306,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的作品</p>
 				</div>
@@ -313,7 +314,7 @@ body{width: 1080px;
 					<p>nothing to show here</p>
 				</div>
 			</div>
-			<div class="menuBarQuater">
+			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>联系我</p>
 				</div>
@@ -361,47 +362,41 @@ body{width: 1080px;
 					<img src="photo/index-06.jpg" alt="图片6"/>
 				</div>
 			</div>
-		</div>
-		<div class="myIntro">
-			<div class="myIntro_PC">
-				<input checked="checked" id="payment" name="policy" type="radio" />
-				<label for="payment" id="label_payment">PAYMENT </label>
-				<input id="shipping" name="policy" type="radio" />
-				<label for="shipping" id="label_shipping">SHIPPING</label>
-				<input id="returns" name="policy" type="radio" />
-				<label for="returns" id="label_returns">RETURNS </label>
-				<div id="payment_text">
-					PayPal is the only accepted payment method.<br />
-					&nbsp;
+			<div class="myIntro">
+				<div class="myIntro_PC">
+					<input checked="checked" id="myIntro_PC_item01" name="myIntros" type="radio" />
+					<label for="myIntro_PC_item01" class="myIntro_PC_itemLabel">PAYMENT </label>
+					<div class="myIntro_PC_itemText">
+						PayPal is the only accepted payment method.<br />
+						&nbsp;
+					</div>
+					<input id="myIntro_PC_item02" name="myIntros" type="radio" />
+					<label for="myIntro_PC_item02" class="myIntro_PC_itemLabel">SHIPPING</label>
+					<div class="myIntro_PC_itemText">
+						Handling time: 10 business days.<br />
+						Item will be shipped to buyer&#39;s PayPal address.
+					</div>
+					<input id="myIntro_PC_item03" name="myIntros" type="radio" />
+					<label for="myIntro_PC_item02" class="myIntro_PC_itemLabel">RETURNS </label>
+					<div class="myIntro_PC_itemText">
+						Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
+					</div>
 				</div>
-				<div id="shipping_text">
-					Handling time: 10 business days.<br />
-					Item will be shipped to buyer&#39;s PayPal address.
-				</div>
-				<div id="returns_text">
-					Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
-				</div>
-			</div>
-			<div class="myIntro_mobile">
-				<div class="policyMobileHeader">PAYMENT</div>
-				<div class="policyMobileText">PayPal is the only accepted payment method.</div>
-				<div class="policyMobileHeader">SHIPPING</div>
-				<div class="policyMobileText">
-					Handling time: 10 business days.<br />
-					Item will be shipped to buyer&#39;s PayPal address.
-				</div>
-				<div class="policyMobileHeader">RETURNS</div>
-				<div class="policyMobileText">
-					Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
+				<div class="myIntro_mobile">
+					<div class="myIntro_MobileHeader">PAYMENT</div>
+					<div class="myIntro_MobileText">PayPal is the only accepted payment method.</div>
+					<div class="myIntro_MobileHeader">SHIPPING</div>
+					<div class="myIntro_MobileText">
+						Handling time: 10 business days.<br />
+						Item will be shipped to buyer&#39;s PayPal address.
+					</div>
+					<div class="myIntro_MobileHeader">RETURNS</div>
+					<div class="myIntro_MobileText">
+						Generally speaking, returns are not accepted, but if you receive an item with serious damage, please contact me through ebay system, I will get back to you soon.
 				</div>
 			</div>
 		</div>
 	</div>
-<script>
-	window.onload=function(){
-	document.getElementsByClassName('menuBarQuater').hover()
-	}
-</script>
 </body>
 
 </html>
