--- a/index.html
+++ b/index.html
@@ -204,10 +204,12 @@ body{width: 1080px;
 	cursor: pointer;
 }
 .myIntro_PC_itemLabel:hover{
-	background-color: #de6d38;
+	background-color: #F75000;
+	color: white;
 }
 .myIntro_PC input:checked + .myIntro_PC_itemLabel{
-	background-color: #de6d38;
+	background-color: #F75000;
+	color: white;
 }
 .myIntro_PC input:nth-of-type(1):checked ~ .myIntro_PC_itemText:nth-of-type(1),
 .myIntro_PC input:nth-of-type(2):checked ~ .myIntro_PC_itemText:nth-of-type(2),
@@ -215,9 +217,12 @@ body{width: 1080px;
 	display: block;
 }
 .myIntro_PC_itemText{
-	margin: 0px 5% 25px 5%;
+	margin: 0px 30px 25px 30px;
 	padding: 10px 40px;
-	background-color: green;
+	background-color: #f8d781;
+	border-left: 1px solid #F75000;
+	border-bottom: 1px solid #F75000;
+	border-right: 1px solid #F75000;
 	text-align: left;
 	display: none;
 }
@@ -233,18 +238,23 @@ body{width: 1080px;
 	.menuBar{width: 100%;}
 	.lowerPart{left: 0px; width: 100%;}
 	.menuBar:before, .menuBar:after{display: none;}
+	.myPhoto{margin-top: 50px;}
 }
 @media all and (max-width: 950px)
 {
 	.myHeaderPhoto{left: 130px;}
 	.myHeaderText{left: 300px;}
+	.myIntro_PC_itemText{
+		margin-left: 15px;
+		margin-right: 15px;
+	}
 }
 @media all and (max-width: 820px)
 {
 	.myHeaderPhoto{left: 100px;}
 	.myHeaderText{left: 270px;}
-	.myPhoto{width: 600px;}
-	.myPhoto_big{width: 500px; left: 50px;}
+	.myPhoto{width: 600px; height: 480px;}
+	.myPhoto_big{width: 500px; top: 85px; left: 50px;}
 }
 @media all and (max-width: 730px)
 {
@@ -256,8 +266,8 @@ body{width: 1080px;
 	.myHeaderPhoto{top: 30px; left: 40px; width: 90px; height: 90px; border-radius: 45px;}
 	.myHeaderPhoto img{top: -30px; left: -14px;width: 220px;}
 	.myHeaderText{left: 150px;}
-	.myPhoto{width: 450px;}
-	.myPhoto_big{width: 425px; left: 12px;}
+	.myPhoto{width: 450px; height: 400px;}
+	.myPhoto_big{width: 425px; left: 12px; top: 60px;}
 }
 @media all and (max-width: 550px)
 {
@@ -270,21 +280,26 @@ body{width: 1080px;
 		left: auto;
 		right: 0px;
 	}
+	.myIntro_PC_itemText{
+		margin-left: 5px;
+		margin-right: 5px;
+	}
 }
 @media all and (max-width: 480px)
 {
 	.myHeaderPhoto{ left: 18px;}
 	.myHeaderText{top: 50px; left: 120px;}
 	.myHeaderText p{font-size: 40px;}
-	.myPhoto{margin-top: 10px; width: 98%;}
+	.myPhoto{margin-top: 20px; width: 400px; height: 330px;}
 	.myPhoto_thumb{display: none;}
 	.myPhoto_big:nth-child(2){
 		top: 0px;
 		left: 0px;
 		width: 100%;
 	}
-	.myPhoto_big:nth-child(2) img{
-
+	.myIntro_PC_itemLabel{
+		padding: 5px 5px 3px 5px;
+		font-size: 13px;
 	}
 }
 @media all and (max-width: 420px)
@@ -292,6 +307,7 @@ body{width: 1080px;
 	.myHeaderPhoto{left: 10px;}
 	.myHeaderText{left: 105px;}
 	.myHeaderText p{font-size: 40px;}
+	.myPhoto{margin-top: 18px; width: 360px; height: 280px;}
 	.myPhoto_thumb{display: none;}
 	.myPhoto_big{display: none;}
 }
@@ -300,6 +316,7 @@ body{width: 1080px;
 	.myHeaderPhoto{left: 3px;}
 	.myHeaderText{left: 100px;}
 	.menuBarQuater{width: 23%;}
+	.myPhoto{margin-top: 15px; width: 340px; height: 270px;}
 }
 @media all and (max-width: 390px)
 {
@@ -310,6 +327,7 @@ body{width: 1080px;
 {
 	.myHeaderText p{font-size: 33px;}
 	.menuBarText p{font-size: 15px;}
+	.myPhoto{margin-top: 13px; width: 300px; height: 250px;}
 }
 @media all and (max-width: 350px)
 {
