--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ body{width: 1080px;
 	.myHeaderText{left: 270px;}
 	.myPhoto{margin-top: 40px; width: 600px; height: 480px;}
 	.myPhoto_big{width: 500px; top: 85px; left: 50px;}
+	.myIntro_PC_itemText{margin-bottom: 15px;}
 }
 @media all and (max-width: 730px)
 {
@@ -283,6 +284,7 @@ body{width: 1080px;
 	.myIntro_PC_itemText{
 		margin-left: 5px;
 		margin-right: 5px;
+		margin-bottom: 10px;
 	}
 }
 @media all and (max-width: 480px)
