--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@ body{width: 1080px;
 	width: 100%;
 	margin: 0px;
 	position: relative;
-
 }
 .upperPart{
 	position: relative;
 	width: 900px;
 	height: 150px;
 	margin: 0px auto;
-	background-color: white;
+	background-color: #FFFACD;;
 	box-shadow: 0px 0px 20px black;
 	z-index: -1
 }
@@ -137,7 +136,7 @@ body{width: 1080px;
 	width: 900px;
 	margin: 0px auto;
 	text-align: center;
-	background-color: white;
+	background-color: #FFFACD;;
 	box-shadow: 0px 0px 20px black;
 	z-index: -2;
 }
