--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@ body{width: 1080px;
 	text-align: center;
 }
 .subBody{
-	width: 100%;
-	margin: 0px;
 	position: relative;
+	width: 900px;
+	margin: 0px auto;
+	background-color: #FFFACD;
+	box-shadow: 0px 0px 20px black;
+	z-index: 0;
 }
 .upperPart{
 	position: relative;
-	width: 900px;
+	width: 100%;
 	height: 150px;
 	margin: 0px auto;
-	background-color: #FFFACD;;
-	box-shadow: 0px 0px 20px black;
-	z-index: -1
+	background-color: #FFFACD;
+	z-index: 0;
 }
 .myHeaderPhoto{
-	position: absolute;
+	position: relative;
 	top: 15px;
-	left: 95px;
 	width: 120px;
 	height: 120px;
 	border-radius: 60px;
 	box-shadow: 0px 0px 10px black;
 	overflow: hidden;
+	display: inline-block;
 }
 .myHeaderPhoto img{
 	position: absolute;
@@ -44,24 +46,26 @@ body{width: 1080px;
 	width: 280px;
 }
 .myHeaderText{
-	position: absolute;
-	top: 40px;
-	left: 310px;
+	position: relative;
+	top: -20px;
+	height: 120px;
+	display: inline-block;
 }
 .myHeaderText p{
 	margin: 0px;
 	font-size: 50px;
+	line-height: 120px;
 	color: #9e0500;
 	font-weight: bold;
 	text-shadow: 0px 2px 4px #ffc107;
 }
 .menuBar{
-	width: 920px;
+	width: 930px;
 	height: 60px;
-	margin: 0px auto;
+	margin: 0px 0px 0px -15px;
 	text-align: center;
 	background-color: 	#F75000;
-	z-index: 900;
+	z-index: 2;
 }
 .menuBar:before, .menuBar:after{
 	content:"";
@@ -74,12 +78,12 @@ body{width: 1080px;
 	z-index: -1;
 }
 .menuBar:before{
-	right:81px;
+	right:-5px;
 	box-shadow: 4px 7px 10px #5B5B5B;
 	transform: skew(-5deg) rotate(-1deg);
 }
 .menuBar:after{
-	left: 81px;
+	left: -5px;
 	box-shadow: -4px 7px 10px #5B5B5B;
 	transform: skew(5deg) rotate(1deg);
 }
@@ -119,6 +123,7 @@ body{width: 1080px;
 	box-shadow: 0px 1px 5px gray;
 	cursor: default;
 	display: none;
+	z-index: 2;
 }
 .menuBarQuater:hover{
 	background-color: #FFAD86;
@@ -129,26 +134,29 @@ body{width: 1080px;
 .menuBarQuater:hover > .menuBarText{
 	color: black;
 }
-.lowerPart{
-	position: absolute;
-	top: 210px;
-	left: 89px;
-	width: 900px;
+.middlePart{
+	position: relative;
+	width: 100%;
+	height: 70px;
 	margin: 0px auto;
+	padding: 0px;
+}
+.lowerPart{
+	position: relative;
+	width: 100%;
+	margin: 0px auto;
+	padding: 0px 0px 30px 0px;
 	text-align: center;
-	background-color: #FFFACD;;
-	box-shadow: 0px 0px 20px black;
-	z-index: -2;
+	z-index: 1;
 }
 .myPhoto{
 	position: relative;
-	margin: 70px auto 10px auto;
+	margin: 0px auto 70px auto;
 	padding: 0px;
-	width: 800px;
-	height: 580px;
+	width: 83%;
 }
 .myPhoto_thumb{
-	width: 14%;
+	width: 15%;
 	margin: 2px;
 	border: none;
 	box-shadow: 0px 0px 4px gray;
@@ -164,34 +172,48 @@ body{width: 1080px;
 }
 .myPhoto_big{
 	position: absolute;
-	top: 97.5px;
-	left: 100px;
-	margin: 0px; padding: 0px;
-	width: 600px;
+	margin: 0px auto 30px auto;
+	padding: 0px;
+	top: 92px;
+	left: 11.1%;
+	width: 80%;
 	box-shadow: 0px 1px 5px gray;
 	display: none; 
+	z-index: 1;
 }
-.myPhoto_big:nth-child(2){
+.myPhoto .myPhoto_big:nth-child(7){
+	position: relative;
+	top: 0px;
+	margin: 0px;
 	display: block;
+	z-index: 0;
 }
 .myPhoto_big img{
 	margin: 0px; padding: 0px; max-width: 100%; display: block; 
 }
-.myPhoto_thumb:hover + .myPhoto_big{
+.myPhoto_thumb:nth-child(1):hover ~ .myPhoto_big:nth-child(7),
+.myPhoto_thumb:nth-child(2):hover ~ .myPhoto_big:nth-child(8),
+.myPhoto_thumb:nth-child(3):hover ~ .myPhoto_big:nth-child(9),
+.myPhoto_thumb:nth-child(4):hover ~ .myPhoto_big:nth-child(10),
+.myPhoto_thumb:nth-child(5):hover ~ .myPhoto_big:nth-child(11),
+.myPhoto_thumb:nth-child(6):hover ~ .myPhoto_big:nth-child(12){
 	display: block;
 }
 .myIntro{
 	position: relative;
+}
+.myIntro_3item{
+	bottom: 30px;
 	width: 100%;
 }
-.myIntro_PC input{
+.myIntro_3item input{
 	display: none;
 }
-.myIntro_PC_itemLabel{
+.myIntro_3item_itemLabel{
 	bottom: 30px;
 	display: inline-block;
 	width: 25%;
-	margin: 0px;
+	margin: 0px auto;
 	padding: 10px;
 	color: white;
 	background-color: #F75000;
@@ -201,21 +223,16 @@ body{width: 1080px;
 	box-shadow: 0px -2px 2px gray;
 	cursor: pointer;
 }
-.myIntro_PC_itemLabel:hover{
+.myIntro_3item_itemLabel:hover{
 	background-color: #f8d781;
 	color: black;
 }
-.myIntro_PC input:checked + .myIntro_PC_itemLabel{
+.myIntro_3item input:checked + .myIntro_3item_itemLabel{
 	background-color: #f8d781;
 	color: black;
 }
-.myIntro_PC input:nth-of-type(1):checked ~ .myIntro_PC_itemText:nth-of-type(1),
-.myIntro_PC input:nth-of-type(2):checked ~ .myIntro_PC_itemText:nth-of-type(2),
-.myIntro_PC input:nth-of-type(3):checked ~ .myIntro_PC_itemText:nth-of-type(3){
-	display: block;
-}
-.myIntro_PC_itemText{
-	margin: 0px 30px 25px 30px;
+.myIntro_3item_itemText{
+	margin: 0px 10px;
 	padding: 10px 40px;
 	background-color: #f8d781;
 	border-left: 1px solid #F75000;
@@ -225,116 +242,48 @@ body{width: 1080px;
 	text-align: left;
 	display: none;
 }
-.myIntro_mobile{
-	display: none;
+.myIntro_3item input:nth-of-type(1):checked ~ .myIntro_3item_itemText:nth-of-type(1),
+.myIntro_3item input:nth-of-type(2):checked ~ .myIntro_3item_itemText:nth-of-type(2),
+.myIntro_3item input:nth-of-type(3):checked ~ .myIntro_3item_itemText:nth-of-type(3){
+	display: block;
 }
-@media all and (max-width: 1098px)
+
+@media all and (max-width: 1081px)
 {
-	body{width: 100%;}
-	.upperPart{width: 100%;}
-	.myHeaderPhoto{left: 180px;}
-	.myHeaderText{left: 395px;}
-	.menuBar{width: 100%;}
-	.lowerPart{left: 0px; width: 100%;}
+	body, .subBody, .menuBar{width: 100%; margin: 0px;}
 	.menuBar:before, .menuBar:after{display: none;}
-	.myPhoto{margin-top: 50px;}
 }
-@media all and (max-width: 950px)
+@media all and (max-width: 800px)
 {
-	.myHeaderPhoto{left: 130px;}
-	.myHeaderText{left: 300px;}
-	.myIntro_PC_itemText{
-		margin-left: 15px;
-		margin-right: 15px;
-	}
-}
-@media all and (max-width: 820px)
-{
-	.myHeaderPhoto{left: 100px;}
-	.myHeaderText{left: 270px;}
-	.myPhoto{margin-top: 40px; width: 600px; height: 480px;}
-	.myPhoto_big{width: 500px; top: 85px; left: 50px;}
-	.myIntro_PC_itemText{margin-bottom: 15px;}
-}
-@media all and (max-width: 730px)
-{
-	.myHeaderPhoto{left: 60px;}
-	.myHeaderText{left: 230px;}
-}
-@media all and (max-width: 620px)
-{
-	.myHeaderPhoto{top: 30px; left: 40px; width: 90px; height: 90px; border-radius: 45px;}
-	.myHeaderPhoto img{top: -30px; left: -14px;width: 220px;}
-	.myHeaderText{left: 150px;}
-	.myPhoto{margin-top: 35px; width: 450px; height: 400px;}
-	.myPhoto_big{width: 425px; left: 12px; top: 60px;}
-}
-@media all and (max-width: 550px)
-{
-	.myHeaderPhoto{left: 20px;}
-	.myHeaderText{left: 120px;}
-	.menuDropDown{
-		width: 200px;
-	}
 	.menuBarQuater:nth-child(3) .menuDropDown, .menuBarQuater:nth-child(4) .menuDropDown{
 		left: auto;
 		right: 0px;
 	}
-	.myIntro_PC_itemText{
-		margin-left: 5px;
-		margin-right: 5px;
-		margin-bottom: 10px;
-	}
+	.menuDropDown{width: 200px;}
 }
-@media all and (max-width: 480px)
+@media all and (max-width: 600px)
 {
-	.myHeaderPhoto{ left: 18px;}
-	.myHeaderText{top: 50px; left: 120px;}
-	.myHeaderText p{font-size: 40px;}
-	.myPhoto{margin-top: 20px; width: 400px; height: 330px;}
+	.middlePart{height: 35px;}
+	.myPhoto{width: 100%; margin-bottom: 35px;}
 	.myPhoto_thumb{display: none;}
-	.myPhoto_big:nth-child(2){
-		top: 0px;
-		left: 0px;
-		width: 100%;
-	}
-	.myIntro_PC_itemLabel{
-		padding: 5px 5px 3px 5px;
-		font-size: 13px;
-	}
+	.myPhoto_big{left: 5%; width: 90%;}
 }
-@media all and (max-width: 420px)
+@media all and (max-width: 485px)
 {
-	.myHeaderPhoto{left: 10px;}
-	.myHeaderText{left: 105px;}
+	.myHeaderPhoto{top: 25px; width: 100px; height: 100px; border-radius: 50px;}
+	.myHeaderPhoto img{width: 240px; top: -30px; left: -15px;}
+	.myHeaderText{top: -8px;}
 	.myHeaderText p{font-size: 40px;}
-	.myPhoto{margin-top: 18px; width: 360px; height: 280px;}
-	.myPhoto_thumb{display: none;}
-	.myPhoto_big{display: none;}
+	.myIntro_3item_itemLabel{padding: 5px; font-size: 13px;}
 }
 @media all and (max-width: 400px)
 {
-	.myHeaderPhoto{left: 3px;}
-	.myHeaderText{left: 100px;}
-	.menuBarQuater{width: 23%;}
-	.myPhoto{margin-top: 15px; width: 340px; height: 270px;}
-}
-@media all and (max-width: 390px)
-{
-	.myHeaderText p{font-size: 35px;}
-	.menuBarText p{font-size: 16px;}
-}
-@media all and (max-width: 380px)
-{
+	.myHeaderPhoto{top: 30px; width: 90px; height: 90px; border-radius: 45px;}
+	.myHeaderPhoto img{width: 220px; top: -30px; left: -15px;}
+	.myHeaderText{top: -3px;}
 	.myHeaderText p{font-size: 33px;}
-	.menuBarText p{font-size: 15px;}
-	.myPhoto{margin-top: 13px; width: 300px; height: 250px;}
-}
-@media all and (max-width: 350px)
-{
-	.myHeaderText p{
-		font-size: 31px;
-	}
+	.menuBarQuater{width: 23%;}
+	.menuBarText p{font-size: 16px;}
 }
 </style>
 
@@ -383,88 +332,68 @@ body{width: 1080px;
 				</div>
 			</div>
 		</div>
+		<div class="middlePart">
+		</div>
 		<div class="lowerPart">
 			<div class="myPhoto">
 				<div class="myPhoto_thumb">
 					<img src="photo/index-01.jpg" alt="图片1"/>
 				</div>
-				<div class="myPhoto_big">
-					<img src="photo/index-01.jpg" alt="图片1"/>
-				</div>
 				<div class="myPhoto_thumb">
-					<img src="photo/index-02.jpg" alt="图片2"/>
-				</div>
-				<div class="myPhoto_big">
 					<img src="photo/index-02.jpg" alt="图片2"/>
 				</div>
 				<div class="myPhoto_thumb">
 					<img src="photo/index-03.jpg" alt="图片3"/>
 				</div>
-				<div class="myPhoto_big">
-					<img src="photo/index-03.jpg" alt="图片3"/>
-				</div>
 				<div class="myPhoto_thumb">
 					<img src="photo/index-04.jpg" alt="图片4"/>
 				</div>
-				<div class="myPhoto_big">
-					<img src="photo/index-04.jpg" alt="图片4"/>
-				</div>
 				<div class="myPhoto_thumb">
-					<img src="photo/index-05.jpg" alt="图片5"/>
-				</div>
-				<div class="myPhoto_big">
 					<img src="photo/index-05.jpg" alt="图片5"/>
 				</div>
 				<div class="myPhoto_thumb">
 					<img src="photo/index-06.jpg" alt="图片6"/>
+				</div>
+				<div class="myPhoto_big">
+					<img src="photo/index-01.jpg" alt="图片1"/>
+				</div>
+				<div class="myPhoto_big">
+					<img src="photo/index-02.jpg" alt="图片2"/>
+				</div>
+				<div class="myPhoto_big">
+					<img src="photo/index-03.jpg" alt="图片3"/>
+				</div>
+				<div class="myPhoto_big">
+					<img src="photo/index-04.jpg" alt="图片4"/>
+				</div>
+				<div class="myPhoto_big">
+					<img src="photo/index-05.jpg" alt="图片5"/>
 				</div>
 				<div class="myPhoto_big">
 					<img src="photo/index-06.jpg" alt="图片6"/>
 				</div>
 			</div>
 			<div class="myIntro">
-				<div class="myIntro_PC">
-					<input checked="checked" id="myIntro_PC_item01" name="myIntros" type="radio" />
-					<label for="myIntro_PC_item01" class="myIntro_PC_itemLabel">我的技能</label>
-					<input id="myIntro_PC_item02" name="myIntros" type="radio" />
-					<label for="myIntro_PC_item02" class="myIntro_PC_itemLabel">我的爱好</label>
-					<input id="myIntro_PC_item03" name="myIntros" type="radio" />
-					<label for="myIntro_PC_item03" class="myIntro_PC_itemLabel">我喜欢的作品</label>
-					<div class="myIntro_PC_itemText">
+				<div class="myIntro_3item">
+					<input checked="checked" id="myIntro_3item_item01" name="myIntros" type="radio" />
+					<label for="myIntro_3item_item01" class="myIntro_3item_itemLabel">我的技能</label>
+					<input id="myIntro_3item_item02" name="myIntros" type="radio" />
+					<label for="myIntro_3item_item02" class="myIntro_3item_itemLabel">我的爱好</label>
+					<input id="myIntro_3item_item03" name="myIntros" type="radio" />
+					<label for="myIntro_3item_item03" class="myIntro_3item_itemLabel">我喜欢的作品</label>
+					<div class="myIntro_3item_itemText">
 						我会的技能有：<br/>
 						1.<br/>
 						2.<br/>
 						3.<br/>
 					</div>
-					<div class="myIntro_PC_itemText">
+					<div class="myIntro_3item_itemText">
 						我喜欢做的事情有：<br/>
 						1.<br/>
 						2.<br/>
 						3.<br/>
 					</div>
-					<div class="myIntro_PC_itemText">
-						我喜欢的作品有：<br/>
-						1.<br/>
-						2.<br/>
-						3.<br/>
-					</div>
-				</div>
-				<div class="myIntro_mobile">
-					<div class="myIntro_MobileHeader">我的技能</div>
-					<div class="myIntro_MobileText">
-						我会的技能有：<br/>
-						1.<br/>
-						2.<br/>
-						3.<br/></div>
-					<div class="myIntro_MobileHeader">我的爱好</div>
-					<div class="myIntro_MobileText">
-						我喜欢做的事情有：<br/>
-						1.<br/>
-						2.<br/>
-						3.<br/>
-					</div>
-					<div class="myIntro_MobileHeader">我喜欢的作品</div>
-					<div class="myIntro_MobileText">
+					<div class="myIntro_3item_itemText">
 						我喜欢的作品有：<br/>
 						1.<br/>
 						2.<br/>
