--- a/index.html
+++ b/index.html
@@ -278,9 +278,10 @@ body{width: 1080px;
 }
 @media all and (max-width: 400px)
 {
-	.myHeaderPhoto{top: 30px; width: 90px; height: 90px; border-radius: 45px;}
+	.upperPart{height: 120px;}
+	.myHeaderPhoto{top: 15px; width: 90px; height: 90px; border-radius: 45px;}
 	.myHeaderPhoto img{width: 220px; top: -30px; left: -15px;}
-	.myHeaderText{top: -3px;}
+	.myHeaderText{top: -15px;}
 	.myHeaderText p{font-size: 33px;}
 	.menuBarQuater{width: 23%;}
 	.menuBarText p{font-size: 16px;}
