Update and rename myWork01.html to mywork01.html

--- a/mywork01.html
+++ b/mywork01.html
@@ -260,7 +260,7 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 					<p>我的作品</p>
 				</div>
 				<div class="menuDropDown">
-					<a href="myWork01.html" target="_self">JavaScript计算器</a>
+					<a href="mywork01.html" target="_self">JavaScript计算器</a>
 				</div>
 			</div>
 			<div class="menuBarQuater" onmouseover="">
