--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ body{width: 1080px;
 					<p>我的作品</p>
 				</div>
 				<div class="menuDropDown">
-					<a href="myWork01.html" target="_self">JavaScript计算器</a>
+					<a href="mywork01.html" target="_self">JavaScript计算器</a>
 				</div>
 			</div>
 			<div class="menuBarQuater" onmouseover="">
