--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 <title>Jenny's blog</title>
 <style>
 html{width: 100%;
+	height: 100%;
 	background-color: #d0d0d0;
 }
 body{width: 1080px;
 	max-width: 100%;
+	min-width: 320px;
+	height: 100%;
 	margin: 0px auto;
 	text-align: center;
 }
 .subBody{
 	position: relative;
 	width: 900px;
+	min-height: 100%;
+	height: auto;
 	margin: 0px auto;
 	background-color: #FFFACD;
 	box-shadow: 0px 0px 20px black;
@@ -324,7 +329,7 @@ body{width: 1080px;
 					<p>我的收藏</p>
 				</div>
 				<div class="menuDropDown">
-					nothing to show here
+					<a href="useful.html" target="_self">有用的东西都在这</a>
 				</div>
 			</div>
 			<div class="menuBarQuater" onmouseover="">
@@ -332,7 +337,7 @@ body{width: 1080px;
 					<p>我的作品</p>
 				</div>
 				<div class="menuDropDown">
-					<a href="mywork01.html" target="_self">JavaScript计算器</a>
+					<a href="mywork.html" target="_self">看看我在捣鼓啥</a>
 				</div>
 			</div>
 			<div class="menuBarQuater" onmouseover="">
@@ -340,7 +345,7 @@ body{width: 1080px;
 					<p>联系我</p>
 				</div>
 				<div class="menuDropDown">
-					nothing to show here
+					<a href="aboutme.html" target="_self">猜猜我是谁</a>
 				</div>
 			</div>
 		</div>
