--- a/mywork.html
+++ b/mywork.html
@@ -251,7 +251,7 @@ body{width: 1080px;
 		<div class="lowerPart">
 			<ul class="myList">
 				<li><a href="mywork01.html" target="_self">JavaScript计算器</a></li>
-				<li>To-Do List</li>
+				<li><a href="mywork02.html" target="_self">To-Do List</a></li>
 			</ul>
 		</div>
 	</div>
