--- a/mywork02.html
+++ b/mywork02.html
@@ -313,6 +313,7 @@ li.finished{background-color: #EA7500; color: gray; text-decoration: line-throug
 	</div>
 <script type="text/javascript">
 //每个li左边加序号 右边加删除按钮
+	var updateSeq = function (){
 var myList=document.getElementsByTagName("LI");
 var m;
 for(m=0; m < myList.length; m++){
@@ -327,7 +328,10 @@ for(m=0; m < myList.length; m++){
 	span02.appendChild(txt02);
 	myList[m].appendChild(span02);
 }
+		}
 //单击删除按钮 隐藏该li
+	
+updateSeq();
 
 var finishTask=document.getElementsByClassName("closeBtn");
 var i;
@@ -335,6 +339,7 @@ for(i=0; i < finishTask.length; i++){
 	finishTask[i].onclick=function(){
 		var parentDiv=this.parentElement;
 		parentDiv.style.display="none";
+		updateSeq();
 	}
 }
 /*
