--- a/mywork02.html
+++ b/mywork02.html
@@ -314,6 +314,7 @@ li.finished{background-color: #EA7500; color: gray; text-decoration: line-throug
 <script type="text/javascript">
 //每个li左边加序号 右边加删除按钮
 	var updateSeq = function (){
+		console.log('updateSeq');
 var myList=document.getElementsByTagName("LI");
 var m;
 for(m=0; m < myList.length; m++){
